--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,34 @@
+:root {
+  --gray: #B8C1EC;
+  --white: #FFFFFE;
+}
+
 body {
-  color: #B8C1EC;
+  color: var(--gray);
   font-size: 16px;
   background-color: #232946;
 }
 
 a {
-  color: #B8C1EC;
+  color: var(--gray);
 }
 
 header {
   font-size: 14px;
-  color: #B8C1EC;
+  color: var(--gray);
 }
 
 header a {
-  color: #B8C1EC;
+  color: var(--gray);
   text-decoration: none;
 }
 
 header a:hover {
-  color: #FFFFFE;
+  color: var(--white);
 }
 
 nav details summary {
-  color: #FFFFFE;
+  color: var(--white);
 }
 
 h1 {
