feat: added charter fonts

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,32 @@
+@font-face {
+  font-family: charter;
+  src: url('../fonts/charter-regular.otf');
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: charter;
+  src: url('../fonts/charter-italic.otf');
+  font-style: italic;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: charter;
+  src: url('../fonts/charter-bold.otf');
+  font-style: normal;
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: charter;
+  src: url('../fonts/charter-bold-italic.otf');
+  font-style: italic;
+  font-weight: bold;
+}
+
+
 :root {
   --gray: #B8C1EC;
   --white: #FFFFFE;
@@ -5,7 +34,6 @@
 
 body {
   color: var(--gray);
-  font-size: 16px;
   background-color: #232946;
 }
 
